--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "commander": "^6.1.0",
     "cosmiconfig": "^6.0.0",
     "glob": "^7.1.4",
-    "gonzales-pe-sl": "github:srowhani/gonzales-pe#dev",
+    "gonzales-pe-sl": "^4.2.3",
     "sass-lint": "^1.13.1",
     "merge": "^1.2.1"
   },
