--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sass-lint-auto-fix-ispot-fix",
+  "name": "@ispot-tv/sass-lint-auto-fix",
   "version": "0.21.2",
   "description": "Automatically resolve sass-linting issues through CLI",
   "main": "./dist/sass-lint-auto-fix.js",
